Add activation benchmarks

--- a/activation/meson.build
+++ b/activation/meson.build
@@ -3,27 +3,37 @@ project('activation_tests', 'cpp',
   default_options: [
     'cpp_std=c++17',
     'warning_level=2',
+    'buildtype=release',
   ]
 )
 
-# Find Catch2 dependency
 catch2_dep = dependency('catch2', required: true)
 
-# Compiler flags for RISC-V vector extension
+march = get_option('march')
+
 riscv_vector_flags = [
-  '-march=rv64gcv',
+  '-march=' + march,
 ]
 
-# Include directories
+if get_option('buildtype') == 'release'
+  riscv_vector_flags += ['-ffast-math']
+endif
+
 inc_dirs = include_directories('.')
 
-# Build the test executable
 test_exe = executable('activation_tests',
   'tests.cpp',
   include_directories: inc_dirs,
   dependencies: [catch2_dep],
   cpp_args: riscv_vector_flags,
+  link_args: ['-static'],
 )
 
-# Register the test with Meson
 test('activation tests', test_exe)
+
+bench_exe = executable('activation_bench',
+  'bench.cpp',
+  include_directories: inc_dirs,
+  cpp_args: riscv_vector_flags,
+  link_args: ['-static'],
+)
