Switch to Google Benchmark

--- a/meson.build
+++ b/meson.build
@@ -6,5 +6,27 @@ project('low-level-rg', 'cpp',
   ]
 )
 
+march = get_option('march')
+
+# Build Google Benchmark as a CMake subproject
+cmake = import('cmake')
+
+cmake_opts = cmake.subproject_options()
+cmake_opts.add_cmake_defines({
+  'BENCHMARK_ENABLE_TESTING': 'OFF',
+  'BENCHMARK_ENABLE_GTEST_TESTS': 'OFF',
+  'BENCHMARK_ENABLE_INSTALL': 'OFF',
+  'CMAKE_BUILD_TYPE': 'Release',
+})
+
+# Pass march flag to benchmark build
+if march != ''
+  cmake_opts.append_compile_args('cpp', ['-march=' + march, '-mno-fence-tso'])
+  cmake_opts.append_link_args('cpp', ['-march=' + march])
+endif
+
+benchmark_proj = cmake.subproject('google-benchmark', options: cmake_opts)
+benchmark_dep = benchmark_proj.dependency('benchmark')
+
 # Add subdirectories
 subdir('activation')
